--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <configuration>
+          <target>10</target>
+          <source>10</source>
+          <release>10</release>
+      </configuration>
       <scope>test</scope>
     </dependency>
   </dependencies>
